# LoL-Clip-Pipeline

./: .env.example  .gitattributes  .gitignore  README.md  generate_labels.py  pyproject.toml  requirements.txt  training.ipynb
backend/: __init__.py  auth.py  caption_gen.py  config.py  cropper.py  encoder.py  fight_detector.py  frame_io.py  logging_config.py  main.py  minimap_classifier.py  minimap_detector.py  models.py  pipeline.py  prepare_negatives.py  preprocess_clips.py  trainer.py  trainer_worker.py  uploader.py  vision_classifier.py
backend/tests/: test_auth.py  test_caption_gen.py  test_cropper.py  test_encoder.py  test_fight_detector.py  test_integration.py  test_minimap.py  test_minimap_classifier.py  test_pipeline_participants.py  test_vision_classifier.py
checkpoints/: minimap_mask_gan.pt  videomae_lol_best.pt
data/minimap_icons/: champions_list.txt  champions_manifest.json
frame_decoder/: CMakeLists.txt  frame_decoder.cpp  frame_decoder.h
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  CaptionEditor.tsx  JobDashboard.tsx  MinimapDisplay.tsx  SocialConnect.tsx  TrainingPanel.tsx  VideoPreview.tsx  index.css  types.ts
tools/: build_minimap_classifier_cache.py  collect_minimap_gan_crops.py  create_labels.py  train_minimap_mask_gan.py
